--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	</head>
-	<body>
+	<body style="background-color:powderblue;">
 		<div class=page>
   			<h1>User Input!</h1>
 				<div class=metanav>
-				<h4>Please enter a stock ticker egs. GOOG, AAPL, and check desired features.</h4>
+				<h4>Please enter Days(12-20) and Hours(0-23).</h4>
 				<form id='input' method='post' action='index'>
 					<p>
 						<b>Ticker symbol: </b>  <input type='text' name='ticker' />
